# cookiecutter-django-celery

./: .gitignore  README.md  cookiecutter.json
{{cookiecutter.project_name}}/: Dockerfile.beat  Dockerfile.dev  Dockerfile.web  Dockerfile.worker  Makefile  README.md  docker-compose.yml  pyproject.toml  tox.ini
{{cookiecutter.project_name}}/.github/workflows/: ci.yml
{{cookiecutter.project_name}}/src/{{cookiecutter.project_slug|replace('-', '_')}}/: manage_cli.py  migrate_cli.py
{{cookiecutter.project_name}}/src/{{cookiecutter.project_slug|replace('-', '_')}}/core/: apps.py  tasks.py  urls.py
{{cookiecutter.project_name}}/src/{{cookiecutter.project_slug|replace('-', '_')}}/server/: asgi.py  settings.py  urls.py  wsgi.py
{{cookiecutter.project_name}}/src/{{cookiecutter.project_slug|replace('-', '_')}}/tasks/: celery_app.py  cli.py
{{cookiecutter.project_name}}/tests/: test_bootstrap.py  test_smoke_celery.py  test_smoke_django.py
{{cookiecutter.project_slug}}/: .flake8  .gitignore  Dockerfile.beat  Dockerfile.dev  Dockerfile.web  Dockerfile.worker  Makefile  README.md  docker-compose.yml  pyproject.toml  tox.ini
{{cookiecutter.project_slug}}/src/{{cookiecutter.package_name}}/: manage_cli.py  migrate_cli.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.package_name}}/core/: apps.py  tasks.py  urls.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.package_name}}/server/: asgi.py  settings.py  urls.py  wsgi.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.package_name}}/tasks/: celery_app.py  cli.py
{{cookiecutter.project_slug}}/tests/: test_bootstrap.py  test_smoke_celery.py  test_smoke_django.py
